k8s/prod/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: expobages-web
  labels:
    app: expobages-web
spec:
  selector:
    app: expobages-web
  type: ClusterIP
  ports:
    - name: http
      port: 80
