k8s/prod/web-ingress2.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-expobages-web
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/issuer: "letsencrypt-web-firamanresa-cat"
spec:
  tls:
    - hosts:
        - web.firamanresa.cat
      secretName: web-firamanresa-cat-tls
  rules:
    - host: web.firamanresa.cat
      http:
        paths:
          - path: /expobages
            pathType: Prefix
            backend:
              service:
                name: expobages-web
                port:
                  number: 80
